# rescrit

./: Context.md  README.md  Tasks.md  pyproject.toml
avocat/: CLAUDE.md  Context.md  analyse-contentieux-sasu-ir-17pct.md  avis-situation-insee-micro-entreprise.md  declaration-ca-micro-entreprise-nov-2025.md  demande-rescrit-social-urssaf-2025-02.md  kbis-beluga-paris-sas.md
debat/: admission-are-france-travail-oct-2024.md  conversation.md  demande-rescrit-fiscal-drfip-2025-02.md  memento-fiscal-beluga-paris.md  question-parlementaire-12673-bergantz.md  references.md  reponse-rescrit-fiscal-drfip-2025-08.md  reponse-rescrit-social-urssaf-2025.md
fisc/: CLAUDE.md
lettre/: CC-2000-439-DC.md  CC-2009-599-DC.md  CC-2012-659-DC.md  CC-81-132-DC.md  references.md  rescrit.md
lettre-alternative/: references.md  rescrit.md
simulation/: app.py  constants.py  engine.py  sankey.py
